modified and added endpoints
