# src/mini_blog_api/controllers/card_controller.py
@@ -1,15 +1,14 @@
 from typing import Any, Dict, List
 
 import structlog
-from fastapi import APIRouter, Depends, Header, HTTPException, Query, Request
+from bson.objectid import ObjectId
+from fastapi import APIRouter, Depends, HTTPException, Request
 
 from ..config import Settings, get_settings
 from ..models.base_model import default_responses
-from ..models.card_model import Card, CardPayload
-from ..repositories.auth_repository import AuthRepository
+from ..models.card_model import Card, CardPayload, CardQueryParams
 from ..repositories.card_repository import CardRepository
 from ..repositories.category_repository import CategoryRepository
-from ..services.auth import get_current_user, validate_auth
 
 log = structlog.get_logger()
 settings: Settings = get_settings()
@@ -23,82 +22,64 @@ router = APIRouter(
 
 @router.post("/cards", responses=default_responses)
 async def create_card(
+    request: Request,
     card: CardPayload,
-    card_repo: CardRepository = Depends(),
-    authorization: str = Header(None),
 ):
-    if not authorization or not authorization.startswith("Bearer "):
-        raise HTTPException(status_code=401, detail="Invalid Authorization header")
-
-    await validate_auth(authorization)
-
-    existing_card = await card_repo.find_card(card.name)
+    existing_card = await CardRepository.find_one(**dict(name=card.name))
 
     if existing_card:
         raise HTTPException(status_code=403, detail="card already exists.")
 
-    category = await CategoryRepository.find_one(card.category)
-    author = await AuthRepository.find_user(card.author)
+    category = await CategoryRepository.find_one(**dict(_id=ObjectId(card.category)))
 
-    if not author:
-        raise HTTPException(status_code=404, detail="Auth not found.")
-    elif not category:
+    if not category:
         raise HTTPException(status_code=404, detail="Category not found.")
 
-    if category:
-        card.category = category.id
-
-    if author:
-        card.author = author.id
-
-    await card_repo.insert_card(card)
+    inserted_result = await CardRepository.insert_one(card, request.state.user)
 
     resp = dict(
-        message="New card is successfully created",
-        name=card.name,
-        status=card.status,
-        category=category.name,
-        author=author.username,
-        content=card.content,
+        message="New card is successfully created.", card_id=str(inserted_result)
     )
 
     raise HTTPException(status_code=201, detail=resp)
 
 
+@router.get("/cards/{card_id}", response_model=Card)
+async def get_card_by_id(card_id: str):
+    card_dict: Card = await CardRepository.find_one(**dict(_id=ObjectId(card_id)))
+    if card_dict:
+        return card_dict
+    else:
+        raise HTTPException(status_code=404, detail="Category not found")
+
+
 @router.get("/cards", responses=default_responses)
-async def get_card_list(name: str = Query(None), authorization: str = Header(None)):
-    if not authorization or not authorization.startswith("Bearer "):
-        raise HTTPException(status_code=401, detail="Invalid Authorization header")
-
-    await validate_auth(authorization)
-
+async def get_card_list(query_params: CardQueryParams = Depends()):
     query_filter: Dict[str, Any] = {}
 
-    if name is not None:
-        query_filter["name"] = name
+    if query_params.id:
+        query_filter["_id"] = ObjectId(query_params.id)
 
-    docs: List[Card] = await CardRepository.find_card_list(query_filter=query_filter)
+    if query_params.name:
+        query_filter["name"] = query_params.name
+
+    docs: List[Card] = await CardRepository.find(
+        query_filter=query_filter, skip=query_params.skip, limit=query_params.limit
+    )
 
     if not docs:
-        raise HTTPException(status_code=404, detail="card not found")
+        raise HTTPException(status_code=404, detail="Cards not found")
 
-    return docs
+    return {"cards": docs}
 
 
-@router.patch("/cards/{card_name}")
+@router.patch("/cards/{card_id}")
 async def update_card_data(
-    card_name: str,
-    card_data: Request,
-    authorization: str = Header(None),
-    current_user: str = Depends(get_current_user),
+    card_id: str,
+    request: Request,
 ):
-    if not authorization or not authorization.startswith("Bearer "):
-        raise HTTPException(status_code=401, detail="Invalid Authorization header")
-
-    await validate_auth(authorization)
-
-    payload = await card_data.json()
-    updated_card = await CardRepository.update_card(card_name, payload, current_user)
+    payload = await request.json()
+    updated_card = await CardRepository.update_one(card_id, payload, request.state.user)
 
     if not updated_card:
         raise HTTPException(status_code=404, detail="Card not found")
@@ -106,18 +87,12 @@ async def update_card_data(
     raise HTTPException(status_code=200, detail="Card is updated.")
 
 
-@router.delete("/cards/{card_name}", responses=default_responses)
+@router.delete("/cards/{card_id}", responses=default_responses)
 async def delete_card_by_name(
-    card_name: str,
-    authorization: str = Header(None),
-    current_user: str = Depends(get_current_user),
+    request: Request,
+    card_id: str,
 ):
-    if not authorization or not authorization.startswith("Bearer "):
-        raise HTTPException(status_code=401, detail="Invalid Authorization header")
-
-    await validate_auth(authorization)
-
-    deleted_card = await CardRepository.delete_card(card_name, current_user)
+    deleted_card = await CardRepository.delete_one(card_id, request.state.user)
 
     if not deleted_card:
         raise HTTPException(status_code=404, detail="Card not found.")
